--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"赛美尖",
     "subTitle":"热衷于分享的优质博主",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/93992128?v=4",
     "GMEEK_VERSION":"last"
 }
