--- a/config.json
+++ b/config.json
@@ -1,6 +1,12 @@
 {
     "title":"  赛美尖",
     "subTitle":"  热衷于分享的优质博主",
-    "avatarUrl":"https://avatars.githubusercontent.com/u/93992128?v=4",
-    "GMEEK_VERSION":"last"
+    "avatarUrl":"https://pic.psymeasure.cn/u/93992128?v=4",
+    "GMEEK_VERSION":"last",
+    "homeUrl":"https://blog.psymeasure.cn/",
+    "startSite":"02/16/2024",
+    "filingNum":"浙ICP备20023628号",
+    "urlMode":"pinyin",
+    "showPostSource":0,
+    "bottomText":"转载请注明出处"
 }
