--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "title":"  赛美尖",
     "subTitle":"  热衷于分享的优质博主",
-    "avatarUrl":"https://pic.psymeasure.cn/u/93992128?v=4",
+    "avatarUrl":"https://i.postimg.cc/Y90QCtKY/image.png",
     "GMEEK_VERSION":"last",
     "homeUrl":"https://blog.psymeasure.cn/",
     "startSite":"02/16/2024",
